# crossai-ts

./: .gitignore  Classification.ipynb  README.md  pyproject.toml  pytest.ini  setup.py  visualization.py
caits/: __init__.py  _properties.py  convert.py  filtering.py  hpss.py  preprocessing.py  properties.py  pytest.ini  utils.py  visualization.py  windowing.py
caits/ai/: __init__.py  _layers.py  _layers_dropout.py
caits/augmentation/: __init__.py  _augment_1d.py
caits/base/: _fix.py  (+6 more)
examples/: CaitsArray.ipynb  Classification.ipynb  Clustering.ipynb  CoreArray.ipynb  DatasetArray.ipynb  DatasetArray_Transformers.ipynb  DatasetArray_Transformers.py  DatasetArray_apply.ipynb  DatasetList.ipynb  DatasetList_Transformers.ipynb  DatasetList_apply.ipynb  EvaluationMech_test.ipynb  README.md  Regression.ipynb  _dataset3_test.ipynb  _dataset_test.ipynb  air_quality_correlations.ipynb  config.yml.template  eda_multiaxis_correlation_aq.ipynb  filtering.ipynb  heartrate_proc.ipynb  load_data.ipynb  multi_axis_augment.ipynb  multi_axis_convert_signal.ipynb  multi_axis_filtering.ipynb  multi_axis_hpss.ipynb  multi_axis_loading_and_regression.ipynb  multi_axis_loading_and_regression_dataset.ipynb  multi_axis_loudness.ipynb  multi_axis_pcen.ipynb  multi_axis_pipelines.ipynb  multi_axis_preprocessing.ipynb  multi_axis_process.ipynb  multi_axis_process_aq_eda.ipynb  multi_axis_process_hgr.ipynb  multi_axis_properties.ipynb  multi_axis_spectral.ipynb  multi_axis_statistical_features.ipynb  multi_axis_windowing.ipynb  new_dataset_test.ipynb  (+28 more)
test/: config.py  conftest.py  utils.py
(+1057 files in other folders)
