[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.poetry]
name = "crossai-ts"
version = "0.0.0.2"
description = "An open-source Python library for developing end-to-end AI pipelines for Time Series Analysis"
authors = ["Pantelis Tzamalis <tzamalis@ceid.upatras.gr>", "George Kontogiannis <g.kontogiannis@ac.upatras.gr>"]
readme = "README.md"
license = "Apache License 2.0"
packages = [{ include = "caits", from = "." }]

[tool.poetry.dependencies]
python = "~3.11"
tensorflow = "2.14.0"
tensorflow-metal = {version = "1.1.0", markers = "platform_system == \"Darwin\""}
pandas = "2.2.0"
pyarrow = "15.0.2"
scipy = "1.12.0"
scikit-learn = "1.4.0"
seaborn = ">=0.12.2"
soundfile = "0.12.1"
tsaug = "0.2.1"
resampy = "0.4.2"
samplerate =  [
    {version = "0.1.0", markers = "platform_system == \"Linux\""},
    {version = "0.2.1", markers = "platform_system == \"Darwin\""}
]
soxr = "0.3.7"
pyyaml = "6.0.1"
boto3 = "1.29.2"
tqdm = "4.66.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
